test/TestSuite/Scheduler/Errors/account_no_leaf.tjp
project test "Test" "1.0" 2007-10-31 +1m

account foo "Foo"

# MARK: error 6 account_no_leaf
task t "T" {
  effort 1d
  chargeset foo
}

supplement account foo {
  account bar "Bar"
}
